dropdown is mostly functioning just need to fix auto collapse, should fit MVP now

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -386,12 +386,13 @@ iframe {
 }
 
 #help-dropdown {
-  left: ;
+  left: 63.25%;
   top: 5%;
 }
 
 #sort-dropdown {
-
+  left: 10%;
+  top: 10.5%;
 }
 
 .dropbtn {
